--- a/BigBlueButton/v2.7/readme
+++ b/BigBlueButton/v2.7/readme
@@ -1,10 +1,16 @@
-
 document:
 https://docs.bigbluebutton.org/administration/install/
 
-github:
+docker:
+https://docs.docker.com/engine/install/ubuntu/
+
+
+install bigbluebutton from github:
 https://github.com/bigbluebutton/bbb-install/tree/v2.7.x-release
 wget -qO- https://raw.githubusercontent.com/bigbluebutton/bbb-install/v2.7.x-release/bbb-install.sh | bash -s -- -w -v focal-270 -s bbb.example.com -e info@example.com
 
-docker:
-https://docs.docker.com/engine/install/ubuntu/
+verity:
+bbb-conf --check
+sudo bbb-conf --status
+
+
