--- a/Vmware/disable TLS 1.0/Readme
+++ b/Vmware/disable TLS 1.0/Readme
@@ -1,1 +1,9 @@
+ESXI :
+/etc/vmware/rhttpproxyconfig.xml
+Then, search the <ssl> section and change the line
+        <!-- <protocols>tls1.0,tls1.1,tls1.2</protocols> -->
+to
+        <protocols>tls1.1,tls1.2</protocols>
+Then, restart the web UI :
+/etc/init.d/rhttpproxy restart
 
