--- a/Vmware/Esxi/Disable Tls 1.0/Readme
+++ b/Vmware/Esxi/Disable Tls 1.0/Readme
@@ -1,1 +1,16 @@
+
+https://superuser.com/questions/1328395/esxi-tls-configuration
+ESXI :
+/etc/vmware/rhttpproxyconfig.xml
+Then, search the <ssl> section and change the line
+        <!-- <protocols>tls1.0,tls1.1,tls1.2</protocols> -->
+to
+        <protocols>tls1.1,tls1.2</protocols>
+Then, restart the web UI :
+/etc/init.d/rhttpproxy restart
+
+
+
+
+
 https://knowledge.broadcom.com/external/article/320798/disabling-static-ciphers-for-tls-in-esxi.html
