--- a/BigBlueButton/v2.7/readme
+++ b/BigBlueButton/v2.7/readme
@@ -1,3 +1,92 @@
+bahmani :
+1- set hostname
+  verify your \etc\hosts
+2- copy certificate 
+    mkdir -p /etc/letsencrypt/live/bigbluebutton.faradis.net
+    /etc/letsencrypt/live/bigbluebutton.faradis.net/fullchain.pem
+    /etc/letsencrypt/live/bigbluebutton.faradis.net/privkey.pem
+3- install 
+wget -qO- https://raw.githubusercontent.com/bigbluebutton/bbb-install/v2.7.x-release/bbb-ins  tall.sh | bash -s -- -w -v focal-270 -s bbb.faratest.net -w -g -k
+
+4- verify:
+    bbb-conf --check
+    sudo bbb-conf --status
+    dpkg -l | grep bbb-
+    docker ps
+            CONTAINER ID   IMAGE                            COMMAND                  CREATED          STATUS          PORTS                                NAMES
+            9402f7523278   bigbluebutton/greenlight:v3      "bin/start"              39 minutes ago   Up 39 minutes   127.0.0.1:5050->3000/tcp             greenlight-v3
+            e2c1b63f1b52   quay.io/keycloak/keycloak:20.0   "/opt/keycloak/bin/k…"   39 minutes ago   Up 39 minutes   8443/tcp, 127.0.0.1:5151->8080/tcp   keycloak
+            2ad3e45390dc   redis:6.2-alpine3.17             "docker-entrypoint.s…"   39 minutes ago   Up 39 minutes   6379/tcp                             redis
+            9c5249bfc6c5   postgres:14.6-alpine3.17         "docker-entrypoint.s…"   39 minutes ago   Up 39 minutes   5432/tcp                             postgres
+
+
+    docker image ls
+            REPOSITORY                  TAG               IMAGE ID       CREATED         SIZE
+            bigbluebutton/greenlight    v3                6802b602f8a4   7 weeks ago     538MB
+            bbb-soffice                 latest            e00a11fe4e9f   12 months ago   1.02GB
+            redis                       6.2-alpine3.17    a9a47a706682   19 months ago   27.1MB
+            quay.io/keycloak/keycloak   20.0              97ad0f08436f   21 months ago   559MB
+            postgres                    14.6-alpine3.17   420ebe472686   22 months ago   242MB
+
+    docker network ls
+            NETWORK ID     NAME                    DRIVER    SCOPEdo
+            2770a3a62b47   greenlight-v3_default   bridge    local
+
+systemctl status haproxy
+            Nov 12 07:49:38 bbb.faradis.net haproxy[507928]: Proxy nginx started.
+            Nov 12 07:49:38 bbb.faradis.net haproxy[507928]: Proxy nginx-http2 started.
+            Nov 12 07:49:38 bbb.faradis.net haproxy[507928]: Proxy nginx-http2 started.
+            Nov 12 07:54:05 bbb.faradis.net systemd[1]: Reloading HAProxy Load Balancer.
+            Nov 12 07:54:05 bbb.faradis.net haproxy[512747]: Enter PEM pass phrase:
+            Nov 12 07:54:05 bbb.faradis.net haproxy[512747]: [ALERT] 316/075405 (512747) : parsing [/etc/haproxy>
+            Nov 12 07:54:05 bbb.faradis.net haproxy[512747]: [ALERT] 316/075405 (512747) : Error(s) found in con>
+            Nov 12 07:54:05 bbb.faradis.net haproxy[512747]: [ALERT] 316/075405 (512747) : Fatal errors found in>
+            Nov 12 07:54:05 bbb.faradis.net systemd[1]: haproxy.service: Control process exited, code=exited, st>
+            Nov 12 07:54:05 bbb.faradis.net systemd[1]: Reload failed for HAProxy Load Balancer.
+
+
+5- add user 
+docker exec greenlight-v3 bundle exec rake admin:create
+user: admin@faratest.net
+password: p@swordTEst
+
+
+root@bbb# netstat -ntlup | grep -v tcp6
+tcp        0      0 127.0.0.1:81            0.0.0.0:*               LISTEN      393192/nginx: maste
+tcp        0      0 127.0.0.1:82            0.0.0.0:*               LISTEN      393192/nginx: maste
+tcp        0      0 0.0.0.0:443             0.0.0.0:*               LISTEN      507930/haproxy
+tcp        0      0 127.0.0.1:3022          0.0.0.0:*               LISTEN      513696/node
+tcp        0      0 127.0.0.1:3024          0.0.0.0:*               LISTEN      513698/node
+tcp        0      0 127.0.0.1:3026          0.0.0.0:*               LISTEN      513697/node
+tcp        0      0 127.0.0.1:3014          0.0.0.0:*               LISTEN      513695/node
+tcp        0      0 127.0.0.1:3016          0.0.0.0:*               LISTEN      513509/node
+tcp        0      0 127.0.0.1:9001          0.0.0.0:*               LISTEN      513265/node
+tcp        0      0 127.0.0.1:4000          0.0.0.0:*               LISTEN      513904/node
+tcp        0      0 127.0.0.1:4100          0.0.0.0:*               LISTEN      513920/node
+tcp        0      0 127.0.0.1:3008          0.0.0.0:*               LISTEN      513509/node
+tcp        0      0 127.0.0.1:4001          0.0.0.0:*               LISTEN      513869/node
+tcp        0      0 127.0.0.1:3010          0.0.0.0:*               LISTEN      513695/node
+tcp        0      0 127.0.0.1:4101          0.0.0.0:*               LISTEN      513903/node
+tcp        0      0 127.0.0.1:9002          0.0.0.0:*               LISTEN      513268/node
+tcp        0      0 172.20.190.66:3478      0.0.0.0:*               LISTEN      512626/turnserver
+tcp        0      0 127.0.0.1:6379          0.0.0.0:*               LISTEN      47338/redis-server
+tcp        0      0 172.20.190.66:7443      0.0.0.0:*               LISTEN      513457/freeswitch
+tcp        0      0 172.20.190.66:5066      0.0.0.0:*               LISTEN      513457/freeswitch
+tcp        0      0 172.20.190.66:5090      0.0.0.0:*               LISTEN      513457/freeswitch
+tcp        0      0 172.20.190.66:5060      0.0.0.0:*               LISTEN      513457/freeswitch
+tcp        0      0 127.0.0.1:6011          0.0.0.0:*               LISTEN      2548/sshd: root@pts
+tcp        0      0 127.0.0.1:5151          0.0.0.0:*               LISTEN      515469/docker-proxy
+tcp        0      0 127.0.1.1:27017         0.0.0.0:*               LISTEN      513328/mongod
+udp        0      0 172.20.190.66:5060      0.0.0.0:*                           513457/freeswitch
+udp        0      0 172.20.190.66:5090      0.0.0.0:*                           513457/freeswitch
+udp        0      0 172.20.190.66:3478      0.0.0.0:*                           512626/turnserver
+
+
+
+
+
+
+
 document:
 https://docs.bigbluebutton.org/administration/install/
 
