--- a/BigBlueButton/v2.7/readme
+++ b/BigBlueButton/v2.7/readme
@@ -21,7 +21,8 @@ bahmani :
 
 
 5- install 
-wget -qO- https://raw.githubusercontent.com/bigbluebutton/bbb-install/v2.7.x-release/bbb-install.sh | bash -s -- -w -v focal-270 -s bbb.faradis.net -w -g -k
+wget -qO- https://raw.githubusercontent.com/bigbluebutton/bbb-install/v2.7.x-release/bbb-install.sh | bash -s -- -v focal-270 -s bbb.faradis.net -e admin@faradis.net -w -x 
+
 
 6- you have error 4.3 connectiopn refus
  ***replace your cert to bellow path for haproxy***
@@ -32,7 +33,10 @@ wget -qO- https://raw.githubusercontent.com/bigbluebutton/bbb-install/v2.7.x-rel
      systemctl restart haproxy
 ***** after complete install replaced default cert den you replace it again and restart haproxy service
 
-7- verify:
+7- install Greenlight & Keycloak
+wget -qO- https://raw.githubusercontent.com/bigbluebutton/bbb-install/v2.7.x-release/bbb-install.sh | bash -s -- -w -v focal-270 -s bbb.faradis.net -w -g -k
+
+8- verify:
     bbb-conf --check
     sudo bbb-conf --status
     dpkg -l | grep bbb-
