--- a/Vmware/disable TLS 1.0/Readme
+++ b/Vmware/disable TLS 1.0/Readme
@@ -1,3 +1,8 @@
+
+Bahmani :
+
+
+--------------------------------------
 ESXI :
 /etc/vmware/rhttpproxyconfig.xml
 Then, search the <ssl> section and change the line
