--- a/Manage Engine/PAM360/Readme
+++ b/Manage Engine/PAM360/Readme
@@ -1,2 +1,5 @@
-update
+### update
 https://www.manageengine.com/privileged-access-management/upgradepack.html#instructions
+
+### Import File Samples
+https://www.manageengine.com/privileged-access-management/help/import-file-samples.html
